# e_commerce_project

./: .coverage  .gitignore  README.md  pyproject.toml
src/: category.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_product.py
