[project]
name = "e-commerce-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Shinshalievaaa",email = "aigul_shinshaliyeva@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.9,<5.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.2"
black = "^25.9.0"
isort = "^6.1.0"

